# fatum

./: CMakeLists.txt  cscope.out
include/fatum/: event.hpp  handler.hpp  looper.hpp  steady_clock.hpp
include/fatum/fwd/: handler.hpp
include/fatum/impl/: looper.tpp
include/fatum/queue/: blocking.hpp
src/: CMakeLists.txt  looper.cpp
test/: CMakeLists.txt  looper_test.cpp  queue_test.cpp
